--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ ul {list-style-type: none; margin: 0; padding: 0;}
     box-shadow: 0 0 2px 2px #888;
     -webkit-box-shadow: 0 0 50px rgba(255, 0, 0, 0.5);
     -webkit-border-radius: 15px;
-	-moz-border-radius: 15px;
-	border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
 }
 #battlefield .unit {position: absolute; width: 50px;  height: 50px;}
 #battlefield .building {position: absolute; width: 50px;  height: 50px;}
@@ -71,148 +71,202 @@ ul {list-style-type: none; margin: 0; padding: 0;}
 
 
 @-webkit-keyframes glow {
-	0% {
-		-webkit-box-shadow: 0 0 16px rgba(66, 140, 240, 0.5);
-		border-color: rgba(0,0,255,0.5); 		
-	}
-	100% {
-		-webkit-box-shadow: 0 0 16px rgba(66, 140, 240, 1.0), 0 0 36px rgba(0, 140, 255, 1.0);
-		border-color: rgba(0,0,255,1.0); 
-	}
+    0% {
+        -webkit-box-shadow: 0 0 16px rgba(66, 140, 240, 0.5);
+        border-color: rgba(0,0,255,0.5);         
+    }
+    100% {
+        -webkit-box-shadow: 0 0 16px rgba(66, 140, 240, 1.0), 0 0 36px rgba(0, 140, 255, 1.0);
+        border-color: rgba(0,0,255,1.0); 
+    }
 }
 @-moz-keyframes glow {
-	0% {
-		-moz-box-shadow: 0 0 16px rgba(66, 140, 240, 0.5);
-		border-color: rgba(0,0,255,0.5); 		
-	}
-	100% {
-		-moz-box-shadow: 0 0 16px rgba(66, 140, 240, 1.0), 0 0 36px rgba(0, 140, 255, 1.0);
-		border-color: rgba(0,0,255,1.0); 
-	}
+    0% {
+        -moz-box-shadow: 0 0 16px rgba(66, 140, 240, 0.5);
+        border-color: rgba(0,0,255,0.5);         
+    }
+    100% {
+        -moz-box-shadow: 0 0 16px rgba(66, 140, 240, 1.0), 0 0 36px rgba(0, 140, 255, 1.0);
+        border-color: rgba(0,0,255,1.0); 
+    }
 }
 
 @-webkit-keyframes glow2 {
-	0% {
-		-webkit-box-shadow: 0 0 2px rgba(255, 255, 0, 0.5);
-		border-color: rgba(255,255,0,0.5);
-	}
-	100% {
-		-webkit-box-shadow: 0 0 2px rgba(255, 255, 0, 1.0), 0 0 8px 5px rgba(255, 255, 0, 1.0);
-		border-color: rgba(255, 255, 0,1.0);
-	}
+    0% {
+        -webkit-box-shadow: 0 0 2px rgba(255, 255, 0, 0.5);
+        border-color: rgba(255,255,0,0.5);
+    }
+    100% {
+        -webkit-box-shadow: 0 0 2px rgba(255, 255, 0, 1.0), 0 0 8px 5px rgba(255, 255, 0, 1.0);
+        border-color: rgba(255, 255, 0,1.0);
+    }
 }
 @-moz-keyframes glow2 {
-	0% {
-		-moz-box-shadow: 0 0 2px rgba(255, 255, 0, 0.5);
-		border-color: rgba(255,255,0,0.5);
-	}
-	100% {
-		-moz-box-shadow: 0 0 2px rgba(255, 255, 0, 1.0), 0 0 8px 5px rgba(255, 255, 0, 1.0);
-		border-color: rgba(255, 255, 0,1.0);
-	}
+    0% {
+        -moz-box-shadow: 0 0 2px rgba(255, 255, 0, 0.5);
+        border-color: rgba(255,255,0,0.5);
+    }
+    100% {
+        -moz-box-shadow: 0 0 2px rgba(255, 255, 0, 1.0), 0 0 8px 5px rgba(255, 255, 0, 1.0);
+        border-color: rgba(255, 255, 0,1.0);
+    }
 }
 
 .firerange {
     border: 1px solid red;
     -webkit-border-radius: 100%;
-	-moz-border-radius: 100%;
-	border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
     width: 50px;
     height: 50px;
     position: absolute;
 }
 
 .shot {
-	width:4px;
-	height: 4px;
-	margin: 0 auto;
+    width:4px;
+    height: 4px;
+    margin: 0 auto;
 
-	background-color: rgba(0, 255, 0, 0.5);
+    background-color: rgba(0, 255, 0, 0.5);
     border: 1px solid #ccc;
-	border-color: rgba(0, 255,0,0.5);
-	font-size:180px;
-	color: #000;
-	text-shadow: rgba(20, 20, 20, 0.5) 1px 1px 5px;
-	text-align: center;
-	-webkit-border-radius: 45px;
-	-moz-border-radius: 45px;
-	border-radius: 45px;
-	-webkit-box-shadow: 0 0 500px rgba(0, 255, 0, 0.5);
+    border-color: rgba(0, 255,0,0.5);
+    font-size:180px;
+    color: #000;
+    text-shadow: rgba(20, 20, 20, 0.5) 1px 1px 5px;
+    text-align: center;
+    -webkit-border-radius: 45px;
+    -moz-border-radius: 45px;
+    border-radius: 45px;
+    -webkit-box-shadow: 0 0 500px rgba(0, 255, 0, 0.5);
 
-	-webkit-animation-name: glow2;
-	-webkit-animation-duration: 0.2s;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-direction: alternate;
-	-webkit-animation-timing-function: ease-in-out;
+    -webkit-animation-name: glow2;
+    -webkit-animation-duration: 0.2s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+    -webkit-animation-timing-function: ease-in-out;
 
-	-moz-animation-name: glow2;
-	-moz-animation-duration: 0.2s;
-	-moz-animation-iteration-count: infinite;
-	-moz-animation-direction: alternate;
-	-moz-animation-timing-function: ease-in-out;
+    -moz-animation-name: glow2;
+    -moz-animation-duration: 0.2s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-direction: alternate;
+    -moz-animation-timing-function: ease-in-out;
 }
 
 .shot.enemy {
-	width:4px;
-	height: 4px;
-	margin: 0 auto;
-	
-	background-color: rgba(255, 0, 0, 0.5);
+    width:4px;
+    height: 4px;
+    margin: 0 auto;
+    
+    background-color: rgba(255, 0, 0, 0.5);
     border: 1px solid #ccc;
-	border-color: rgba(255,0,0,0.5);
-	font-size:18px;
-	color: #000; 
-	text-shadow: rgba(20, 20, 20, 0.5) 1px 1px 5px;
-	text-align: center; 
-	-webkit-border-radius: 45px;
-	-moz-border-radius: 45px;
-	border-radius: 45px;
-	-webkit-box-shadow: 0 0 500px rgba(255, 0, 0, 0.5);
-	
-	-webkit-animation-name: glow2;
-	-webkit-animation-duration: 0.1s;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-direction: alternate;
-	-webkit-animation-timing-function: ease-in-out;
-	
-	-moz-animation-name: glow2;
-	-moz-animation-duration: 0.1s;
-	-moz-animation-iteration-count: infinite;
-	-moz-animation-direction: alternate;
-	-moz-animation-timing-function: ease-in-out;
+    border-color: rgba(255,0,0,0.5);
+    font-size:18px;
+    color: #000; 
+    text-shadow: rgba(20, 20, 20, 0.5) 1px 1px 5px;
+    text-align: center; 
+    -webkit-border-radius: 45px;
+    -moz-border-radius: 45px;
+    border-radius: 45px;
+    -webkit-box-shadow: 0 0 500px rgba(255, 0, 0, 0.5);
+    
+    -webkit-animation-name: glow2;
+    -webkit-animation-duration: 0.1s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+    -webkit-animation-timing-function: ease-in-out;
+    
+    -moz-animation-name: glow2;
+    -moz-animation-duration: 0.1s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-direction: alternate;
+    -moz-animation-timing-function: ease-in-out;
 }
 
 #battlefield .unit-human-mg.selected {
-	width:50px;
-	margin: 0 auto;
+    width:50px;
+    margin: 0 auto;
 }
 #battlefield .unit-human-mg.selected {
-		width: 50px;
-		height: 50px;
-		background-color: rgba(66, 140, 240, 0.5); 
-		border-color: rgba(0,0,255,0.5); 
-		font-size:18px;
-		color: #000; 
-		text-shadow: rgba(20, 20, 20, 0.5) 1px 1px 5px;
-		text-align: center; 
-		-webkit-border-radius: 45px;
-		-moz-border-radius: 45px;				
-		border-radius: 45px;
-		-webkit-box-shadow: 0 0 45px rgba(66, 140, 240, 0.5);
-	}
+        width: 50px;
+        height: 50px;
+        background-color: rgba(66, 140, 240, 0.5); 
+        border-color: rgba(0,0,255,0.5); 
+        font-size:18px;
+        color: #000; 
+        text-shadow: rgba(20, 20, 20, 0.5) 1px 1px 5px;
+        text-align: center; 
+        -webkit-border-radius: 45px;
+        -moz-border-radius: 45px;                
+        border-radius: 45px;
+        -webkit-box-shadow: 0 0 45px rgba(66, 140, 240, 0.5);
+    }
 
 #battlefield .unit-human-mg.selected {
-	background-color: rgba(66, 140, 240, 0.5); 
-	border: 1px solid #ccc;
-	-webkit-animation-name: glow;
-	-webkit-animation-duration: 1s;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-direction: alternate;
-	-webkit-animation-timing-function: ease-in-out;	
-	
-	-moz-animation-name: glow;
-	-moz-animation-duration: 1s;
-	-moz-animation-iteration-count: infinite;
-	-moz-animation-direction: alternate;
-	-moz-animation-timing-function: ease-in-out;
-}	
+    background-color: rgba(66, 140, 240, 0.5); 
+    border: 1px solid #ccc;
+    -webkit-animation-name: glow;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+    -webkit-animation-timing-function: ease-in-out;    
+    
+    -moz-animation-name: glow;
+    -moz-animation-duration: 1s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-direction: alternate;
+    -moz-animation-timing-function: ease-in-out;
+}
+
+#control-panel {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 200px;
+    background-color: #eee;
+}
+
+#control-panel .total-ammo {
+    background-color: red; 
+    width: 100%; 
+    height: 10px; 
+}
+
+#control-panel .current-ammo {
+    background-color: green;
+    height: 10px;    
+    width: 100%;
+}
+
+#control-panel .total-actionPoints {
+    background-color: yellow; 
+    width: 100%; 
+    height: 10px; 
+}
+
+#control-panel .current-actionPoints {
+    background-color: blue;
+    height: 10px;    
+    width: 100%;
+}
+
+#unit-actions {
+    width: 20%;
+    height: 100%;
+    background-color: #bbb;
+    float: left;
+}
+
+#unit-status {
+    width: 60%;
+    height: 100%;
+    background-color: #ccc;
+    float: left;
+}
+
+#common-actions {
+    width: 20%;
+    height: 100%;
+    background-color: #bbb;
+    float: left;
+}
