--- a/style.css
+++ b/style.css
@@ -45,8 +45,7 @@ ul {list-style-type: none; margin: 0; padding: 0;}
 #battlefield div.unit.enemy {background-image: url(test4.png); background-repeat: no-repeat; position: absolute; width: 50px;  height: 50px;}
 
 #battlefield .unit-human-mg {background-position: -100px 0px;-webkit-transform: rotate(0deg);}
-/*#battlefield .unit-human-mg.selected {background-position: -100px -50px;-webkit-transform: rotate(0deg);}*/
-#battlefield .unit-human-bazooka {background-position: -128px -4px}
+#battlefield .unit.unit-human-bazooka {background-image: url(test5.png); background-repeat: no-repeat; position: absolute; width: 50px;  height: 50px; background-position: -100px 0px;-webkit-transform: rotate(0deg);}
 #battlefield .unit-human-sniper {background-position: -47px -45px}
 #battlefield .rafinery {background-position: 374px -44px}
 #battlefield .energy {background-position: 293px -4px}
@@ -123,8 +122,8 @@ ul {list-style-type: none; margin: 0; padding: 0;}
 }
 
 .shot {
-    width:4px;
-    height: 4px;
+    width:24px;
+    height: 2px;
     margin: 0 auto;
 
     background-color: rgba(0, 255, 0, 0.5);
@@ -153,8 +152,8 @@ ul {list-style-type: none; margin: 0; padding: 0;}
 }
 
 .shot.enemy {
-    width:4px;
-    height: 4px;
+    width:24px;
+    height: 2px;
     margin: 0 auto;
     
     background-color: rgba(255, 0, 0, 0.5);
