--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ ul {list-style-type: none; margin: 0; padding: 0;}
     background-color: rgba(66, 140, 240, 0.5); 
     border-color: rgba(0,0,255,0.5); 
     text-shadow: rgba(20, 20, 20, 0.5) 1px 1px 5px;
+    text-align: center; 
     -webkit-border-radius: 45px;
     -moz-border-radius: 45px;                
     border-radius: 45px;
@@ -107,7 +108,6 @@ ul {list-style-type: none; margin: 0; padding: 0;}
         border-color: rgba(255, 255, 0,1.0);
     }
 }
-
 @-moz-keyframes glow-mg {
     0% {
         -moz-box-shadow: 0 0 2px rgba(255, 255, 0, 0.5);
