--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ ul {list-style-type: none; margin: 0; padding: 0;}
     width: 1000px; 
     height: 1000px;
     margin-top: 5px;
+    margin-bottom: 200px;
     border: 1px solid #ccc;
 }
 
@@ -32,13 +33,14 @@ ul {list-style-type: none; margin: 0; padding: 0;}
     position: absolute;
     width: 50px;
     height: 50px;
+    margin: 0 auto;
 }
 
 .unit.selected {
     background-color: rgba(66, 140, 240, 0.5); 
     border-color: rgba(0,0,255,0.5); 
     text-shadow: rgba(20, 20, 20, 0.5) 1px 1px 5px;
-    text-align: center; 
+    text-align: center;
     -webkit-border-radius: 45px;
     -moz-border-radius: 45px;                
     border-radius: 45px;
