--- a/css/style.css
+++ b/css/style.css
@@ -16,17 +16,18 @@ ul {list-style-type: none; margin: 0; padding: 0;}
     border: 1px solid #ccc;
 }
 
-.obstacle{
-    background-color: rgba(50, 50, 50, 0.7);
+.obstacle {
+    background-color: rgba(50, 50, 50, 0.8);
     width: 50px;
     height: 50px;
-    -moz-box-shadow: 0 0 2px 2px #888;
-    -webkit-box-shadow: 0 0 2px 2px#888;
-    box-shadow: 0 0 2px 2px #888;
-    -webkit-box-shadow: 0 0 50px rgba(255, 0, 0, 0.5);
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    border-radius: 15px;
+    
+    box-shadow: 0 0 10px #ccc;
+    -webkit-box-shadow: 0 0 10px #ccc;
+    -moz-box-shadow: 0 0 10px #ccc;
+    
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
 }
 
 .unit {
@@ -46,6 +47,7 @@ ul {list-style-type: none; margin: 0; padding: 0;}
     border-radius: 45px;
     -webkit-box-shadow: 0 0 45px rgba(66, 140, 240, 0.5);
     border: 1px solid #ccc;
+    
     -webkit-animation-name: glow;
     -webkit-animation-duration: 1s;
     -webkit-animation-iteration-count: infinite;
@@ -64,6 +66,7 @@ ul {list-style-type: none; margin: 0; padding: 0;}
     background-repeat: no-repeat;
     background-position: -100px 0px;
     -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg)
 }
 
 .unit.enemy.unit-human-mg {
@@ -76,25 +79,30 @@ ul {list-style-type: none; margin: 0; padding: 0;}
     background-repeat: no-repeat;
     background-position: -100px 0px;
     -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg)
 }
 
 @-webkit-keyframes glow {
     0% {
         -webkit-box-shadow: 0 0 16px rgba(66, 140, 240, 0.5);
+        -moz-box-shadow: 0 0 16px rgba(66, 140, 240, 0.5);
         border-color: rgba(0,0,255,0.5);         
     }
     100% {
         -webkit-box-shadow: 0 0 16px rgba(66, 140, 240, 1.0), 0 0 36px rgba(0, 140, 255, 1.0);
+        -moz-box-shadow: 0 0 16px rgba(66, 140, 240, 1.0), 0 0 36px rgba(0, 140, 255, 1.0);
         border-color: rgba(0,0,255,1.0); 
     }
 }
 
 @-moz-keyframes glow {
     0% {
+        -webkit-box-shadow: 0 0 16px rgba(66, 140, 240, 0.5);
         -moz-box-shadow: 0 0 16px rgba(66, 140, 240, 0.5);
         border-color: rgba(0,0,255,0.5);         
     }
     100% {
+        -webkit-box-shadow: 0 0 16px rgba(66, 140, 240, 1.0), 0 0 36px rgba(0, 140, 255, 1.0);
         -moz-box-shadow: 0 0 16px rgba(66, 140, 240, 1.0), 0 0 36px rgba(0, 140, 255, 1.0);
         border-color: rgba(0,0,255,1.0); 
     }
@@ -103,19 +111,23 @@ ul {list-style-type: none; margin: 0; padding: 0;}
 @-webkit-keyframes glow-mg {
     0% {
         -webkit-box-shadow: 0 0 2px rgba(255, 255, 0, 0.5);
+        -moz-box-shadow: 0 0 2px rgba(255, 255, 0, 0.5);
         border-color: rgba(255,255,0,0.5);
     }
     100% {
         -webkit-box-shadow: 0 0 2px rgba(255, 255, 0, 1.0), 0 0 8px 3px rgba(255, 255, 0, 1.0);
+        -moz-box-shadow: 0 0 2px rgba(255, 255, 0, 1.0), 0 0 8px 3px rgba(255, 255, 0, 1.0);
         border-color: rgba(255, 255, 0,1.0);
     }
 }
 @-moz-keyframes glow-mg {
     0% {
+        -webkit-box-shadow: 0 0 2px rgba(255, 255, 0, 0.5);
         -moz-box-shadow: 0 0 2px rgba(255, 255, 0, 0.5);
         border-color: rgba(255,255,0,0.5);
     }
     100% {
+        -webkit-box-shadow: 0 0 2px rgba(255, 255, 0, 1.0), 0 0 8px 3px rgba(255, 255, 0, 1.0);
         -moz-box-shadow: 0 0 2px rgba(255, 255, 0, 1.0), 0 0 8px 3px rgba(255, 255, 0, 1.0);
         border-color: rgba(255, 255, 0,1.0);
     }
@@ -154,6 +166,7 @@ ul {list-style-type: none; margin: 0; padding: 0;}
     background-color: rgba(255, 0, 0, 0.5);
     border-color: rgba(255,0,0,0.5);
     -webkit-box-shadow: 0 0 500px rgba(255, 0, 0, 0.5);
+    -moz-box-shadow: 0 0 500px rgba(255, 0, 0, 0.5);
 }
 
 .bazooka {
@@ -201,7 +214,7 @@ ul {list-style-type: none; margin: 0; padding: 0;}
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 200px;
+    height: 100px;
     background-color: #eee;
 }
 
