--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ ul {list-style-type: none; margin: 0; padding: 0;}
     background-color: rgba(50, 50, 50, 0.8);
     width: 50px;
     height: 50px;
+    z-index: 2;
     
     box-shadow: 0 0 10px #ccc;
     -webkit-box-shadow: 0 0 10px #ccc;
