--- a/css/actionPanel.css
+++ b/css/actionPanel.css
@@ -9,26 +9,26 @@
 }
 
 .action-panel .max-armor {
-    background-color: red; 
-    width: 100%; 
-    height: 10px; 
+    background-color: red;
+    width: 100%;
+    height: 10px;
 }
 
 .action-panel .current-armor {
     background-color: green;
-    height: 10px;    
+    height: 10px;
     width: 100%;
 }
 
 .action-panel .max-action-points {
-    background-color: yellow; 
-    width: 100%; 
-    height: 10px; 
+    background-color: yellow;
+    width: 100%;
+    height: 10px;
 }
 
 .action-panel .current-action-points {
     background-color: blue;
-    height: 10px;    
+    height: 10px;
     width: 100%;
 }
 
@@ -37,6 +37,14 @@
     height: 100%;
     background-color: #bbb;
     float: left;
+}
+
+.action-panel .weapons li {
+    width: 50px;
+    height: 50px;
+    float: left;
+    border: 1px solid green;
+    margin: 1px;
 }
 
 .action-panel .status {
