--- a/css/obstacle.css
+++ b/css/obstacle.css
@@ -1,15 +1,10 @@
 .obstacle {
-    position: absolute;
-    background-color: rgba(50, 50, 50, 0.8);
+    border: 1px solid #ccc;
+    background-color: #001C33;
+    z-index: 2;
     width: 50px;
     height: 50px;
-    z-index: 2;
-    
-    box-shadow: 0 0 10px #ccc;
-    -webkit-box-shadow: 0 0 10px #ccc;
-    -moz-box-shadow: 0 0 10px #ccc;
-    
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
 }
