--- a/css/unit.css
+++ b/css/unit.css
@@ -15,19 +15,14 @@
     -moz-border-radius: 45px;
     border-radius: 45px;
     -webkit-box-shadow: 0 0 45px rgba(66, 140, 240, 0.5);
-    border: 1px solid #ccc;
+    border: 1px solid #0000ff;
+}
 
-    -webkit-animation-name: glow;
-    -webkit-animation-duration: 1s;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-direction: alternate;
-    -webkit-animation-timing-function: ease-in-out;
-
-    -moz-animation-name: glow;
-    -moz-animation-duration: 1s;
-    -moz-animation-iteration-count: infinite;
-    -moz-animation-direction: alternate;
-    -moz-animation-timing-function: ease-in-out;
+.unit.defense-tower {
+    background-color: none;
+    background-image: url(../images/tower.png);
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
 }
 
 .unit.unit-human-mg {
@@ -35,9 +30,11 @@
     background-repeat: no-repeat;
     background-position: -100px 0px;
     -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg)
+    -moz-transform: rotate(0deg);
 }
-
+.unit.enemy {
+    cursor: crosshair;
+}
 .unit.enemy.unit-human-mg {
     background-image: url(../images/test4.png);
     background-repeat: no-repeat;
@@ -48,7 +45,7 @@
     background-repeat: no-repeat;
     background-position: -100px 0px;
     -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg)
+    -moz-transform: rotate(0deg);
 }
 
 @-webkit-keyframes glow {
@@ -207,4 +204,10 @@
     height: 50px;
     position: absolute;
     z-index: 1;
+}
+.uzi {
+    width: 20px;
+    height: 1px;
+    background-color: #ff0000;
+    border: 1px solid #000;
 }
