--- a/css/actionPanel.css
+++ b/css/actionPanel.css
@@ -32,14 +32,14 @@
     width: 100%;
 }
 
-.action-panel .weapons {
+.action-panel .weapons-inventory {
     width: 20%;
     height: 100%;
     background-color: #bbb;
     float: left;
 }
 
-.action-panel .weapons li {
+.action-panel .weapons-inventory li {
     width: 50px;
     height: 50px;
     float: left;
