--- a/css/battlefield.css
+++ b/css/battlefield.css
@@ -10,3 +10,11 @@
     border: 1px solid #ccc;
     background-color: #aaa;
 }
+
+.moving-path {
+    background-color: green;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    opacity: 0.5;
+}
