MapViewClass refactoring - bugfixes

--- a/css/unit.css
+++ b/css/unit.css
@@ -48,150 +48,50 @@
     -moz-transform: rotate(0deg);
 }
 
-@-webkit-keyframes glow {
-    0% {
-        -webkit-box-shadow: 0 0 16px rgba(66, 140, 240, 0.5);
-        -moz-box-shadow: 0 0 16px rgba(66, 140, 240, 0.5);
-        border-color: rgba(0,0,255,0.5);
-    }
-    100% {
-        -webkit-box-shadow: 0 0 16px rgba(66, 140, 240, 1.0), 0 0 36px rgba(0, 140, 255, 1.0);
-        -moz-box-shadow: 0 0 16px rgba(66, 140, 240, 1.0), 0 0 36px rgba(0, 140, 255, 1.0);
-        border-color: rgba(0,0,255,1.0);
-    }
-}
-
-@-moz-keyframes glow {
-    0% {
-        -webkit-box-shadow: 0 0 16px rgba(66, 140, 240, 0.5);
-        -moz-box-shadow: 0 0 16px rgba(66, 140, 240, 0.5);
-        border-color: rgba(0,0,255,0.5);
-    }
-    100% {
-        -webkit-box-shadow: 0 0 16px rgba(66, 140, 240, 1.0), 0 0 36px rgba(0, 140, 255, 1.0);
-        -moz-box-shadow: 0 0 16px rgba(66, 140, 240, 1.0), 0 0 36px rgba(0, 140, 255, 1.0);
-        border-color: rgba(0,0,255,1.0);
-    }
-}
-
-@-webkit-keyframes glow-mg {
-    0% {
-        -webkit-box-shadow: 0 0 2px rgba(255, 255, 0, 0.5);
-        -moz-box-shadow: 0 0 2px rgba(255, 255, 0, 0.5);
-        border-color: rgba(255,255,0,0.5);
-    }
-    100% {
-        -webkit-box-shadow: 0 0 2px rgba(255, 255, 0, 1.0), 0 0 8px 3px rgba(255, 255, 0, 1.0);
-        -moz-box-shadow: 0 0 2px rgba(255, 255, 0, 1.0), 0 0 8px 3px rgba(255, 255, 0, 1.0);
-        border-color: rgba(255, 255, 0,1.0);
-    }
-}
-@-moz-keyframes glow-mg {
-    0% {
-        -webkit-box-shadow: 0 0 2px rgba(255, 255, 0, 0.5);
-        -moz-box-shadow: 0 0 2px rgba(255, 255, 0, 0.5);
-        border-color: rgba(255,255,0,0.5);
-    }
-    100% {
-        -webkit-box-shadow: 0 0 2px rgba(255, 255, 0, 1.0), 0 0 8px 3px rgba(255, 255, 0, 1.0);
-        -moz-box-shadow: 0 0 2px rgba(255, 255, 0, 1.0), 0 0 8px 3px rgba(255, 255, 0, 1.0);
-        border-color: rgba(255, 255, 0,1.0);
-    }
-}
-
 .p9 {
-    width:12px;
-    height: -2px;
-    margin: 0;
-    padding: 0;
-
-    background-color: rgba(0, 255, 0, 0.5);
-    border: 1px solid #ccc;
-    border-color: rgba(0, 255,0,0.5);
-    color: #000;
-    text-shadow: rgba(20, 20, 20, 0.5) 1px 1px 5px;
-    -webkit-border-radius: 45px;
-    -moz-border-radius: 45px;
-    border-radius: 45px;
-    -webkit-box-shadow: 0 0 500px rgba(0, 255, 0, 0.5);
-
-    -webkit-animation-name: glow-mg;
-    -webkit-animation-duration: 0.2s;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-direction: alternate;
-    -webkit-animation-timing-function: ease-in-out;
-
-    -moz-animation-name: glow-mg;
-    -moz-animation-duration: 0.2s;
-    -moz-animation-iteration-count: infinite;
-    -moz-animation-direction: alternate;
-    -moz-animation-timing-function: ease-in-out;
+    width: 10px;
+    height: 1px;
+    border-right: 4px solid orange;
+    background-color: #fff;
 }
 
 .mg {
-    width:24px;
-    height: -2px;
-    margin: 0;
-    padding: 0;
-
-    background-color: rgba(0, 255, 0, 0.5);
-    border: 1px solid #ccc;
-    border-color: rgba(0, 255,0,0.5);
-    color: #000;
-    text-shadow: rgba(20, 20, 20, 0.5) 1px 1px 5px;
-    -webkit-border-radius: 45px;
-    -moz-border-radius: 45px;
-    border-radius: 45px;
-    -webkit-box-shadow: 0 0 500px rgba(0, 255, 0, 0.5);
-
-    -webkit-animation-name: glow-mg;
-    -webkit-animation-duration: 0.2s;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-direction: alternate;
-    -webkit-animation-timing-function: ease-in-out;
-
-    -moz-animation-name: glow-mg;
-    -moz-animation-duration: 0.2s;
-    -moz-animation-iteration-count: infinite;
-    -moz-animation-direction: alternate;
-    -moz-animation-timing-function: ease-in-out;
+    width: 20px;
+    height: 2px;
+    border: 1px;
+    background-color: #eee;
+    -webkit-box-shadow: 0 0 20px rgba(255, 255, 0, 0.8);
+    -moz-box-shadow: 0 0 20px rgba(255, 255, 0, 0.8);
+    border-color: rgba(255,255,0,0.8);
 }
 
-.mg.enemy, .p9.enemy {
-    background-color: rgba(255, 0, 0, 0.5);
-    border-color: rgba(255,0,0,0.5);
-    -webkit-box-shadow: 0 0 500px rgba(255, 0, 0, 0.5);
-    -moz-box-shadow: 0 0 500px rgba(255, 0, 0, 0.5);
+.mg.enemy {
+    -webkit-box-shadow: 0 0 20px rgba(255, 0, 0, 0.8);
+    -moz-box-shadow: 0 0 20px rgba(255, 0, 0, 0.8);
+    border-color: rgba(255,0,0,0.8);
 }
 
 .bazooka {
-    width:30px;
+    width: 30px;
     height: 5px;
-    margin: 0 auto;
+    border: 1px;
+    background-color: rgba(255,255,0,0.5);
 
-    background-color: rgba(0, 255, 0, 0.5);
-    border: 1px solid #ccc;
-    border-color: rgba(0, 255,0,0.5);
-    font-size:180px;
-    color: #000;
-    text-shadow: rgba(20, 20, 20, 0.5) 1px 1px 5px;
-    text-align: center;
-    -webkit-border-radius: 45px;
-    -moz-border-radius: 45px;
-    border-radius: 45px;
-    -webkit-box-shadow: 0 0 500px rgba(0, 255, 0, 0.5);
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
 
-    -webkit-animation-name: glow-mg;
-    -webkit-animation-duration: 0.2s;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-direction: alternate;
-    -webkit-animation-timing-function: ease-in-out;
+    -webkit-box-shadow: 0 0 20px rgba(255, 255, 0, 0.5);
+    -moz-box-shadow: 0 0 20px rgba(255, 255, 0, 0.5);
+    border-color: rgba(255,255,0,0.5);
+}
 
-    -moz-animation-name: glow-mg;
-    -moz-animation-duration: 0.2s;
-    -moz-animation-iteration-count: infinite;
-    -moz-animation-direction: alternate;
-    -moz-animation-timing-function: ease-in-out;
+.bazooka.enemy {
+    background-color: rgba(255,0,0,0.5);
+
+    -webkit-box-shadow: 0 0 20px rgba(255, 0, 0, 0.5);
+    -moz-box-shadow: 0 0 20px rgba(255, 0, 0, 0.5);
+    border-color: rgba(255,0,0,0.5);
 }
 
 .firerange {
@@ -204,10 +104,4 @@
     height: 50px;
     position: absolute;
     z-index: 1;
-}
-.uzi {
-    width: 20px;
-    height: 1px;
-    background-color: #ff0000;
-    border: 1px solid #000;
 }
