--- a/css/battlefield.css
+++ b/css/battlefield.css
@@ -12,9 +12,13 @@
 }
 
 .moving-path {
-    background-color: green;
+    background-color: rgba(0,255,0,0.5);
+    border: 1px solid green;
     position: absolute;
     width: 50px;
     height: 50px;
-    opacity: 0.5;
+}
+.moving-path.not-available {
+    background-color: rgba(255,0,0,0.5);
+    border: 1px solid red;
 }
