performance boost - remove obstacle divs

--- a/css/battlefield.css
+++ b/css/battlefield.css
@@ -1,6 +1,6 @@
 #battlefield {
     overflow: hidden;
-    /*background-image: url(../images/map2.png);*/
+    background-image: url(../images/map.jpg);
     clear: both;
     position: relative;
     width: 2000px;
