--- a/css/inventory.css
+++ b/css/inventory.css
@@ -1,5 +1,6 @@
 .medipack {
     position: absolute;
-    width: 50px;
-    height: 50px;
+    width: 25px;
+    height: 25px;
+    background-image: url('../images/medipack.png');
 }
